<?xml version="1.0" encoding="utf-8"?>


<resources>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    
    <string name="action_contact_details">Details</string>
    
    <string name="form_pass_enter">Enter your Pin:</string>
    <string name="form_pass_show">Show password</string>
    <string name="form_pass_button_check">Check</string>

    <string name="accountSpinnerLabel">Account</string>
    <string name="addContactButtonLabel">Add Contact</string>
    <string name="addContactTitle">Add Contact</string>
    <string name="allAccounts">All Accounts</string>
    <string name="app_name">Kids Phone Dialer</string>
    <string name="contactCreationFailure">Contact creation failed, check logs.</string>
    <string name="contactEmailLabel">Contact Email</string>
    <string name="contactNameLabel">Contact Name</string>
    
    <string name="contactImageLabel">Contact Image</string>
    <string name="contactRingLabel">Contact Ringtone</string>
    
    <string name="contactPhoneLabel">Contact Phone</string>
    <string name="save">Save</string>
    <string name="selectAccountLabel">Select</string>
    <string name="selectLabel">Select label</string>
    <string name="showInvisible">Show Invisible Contacts (Only)</string>
    <string name="targetAccountLabel">Target Account</string>
    <string name="undefinedTypeLabel">(Undefined)</string>
    <string name="contactSms">SMS</string>
    <string name="contactCall">Call Phone</string>
    <string name="buttonClose">Close</string>
    <string name="promptPhones">Phones</string>
    <string name="favorites_title">Favorites</string>
    <string name="all_contacts_title">All contacts</string>
    <string name="filter_contacts_title">Filter for :</string>

    <string name="no_filemanager_installed">No compatible file manager found (OI File Manager)</string>

    <string name="button_select_ringtone">Select</string>

    <string name="button_play_ringtone">Play</string>
    <string name="button_stop_ringtone">Stop</string>
    <string name="button_send_sms">Send SMS</string>
    <string name="version_info">v.</string>

    <string name="about_info">A simple Andriod application that allows a child to just make a call in the list of favorite contacts. Send short messages in an intuitive and colorful interface for a child.</string>
    <string name="button_cancel_sms">Cancel, go back</string>
    <string name="about_title">About...</string>
    <string name="about_author_info">Author(s)</string>
    <string name="about_author_name">DmVStar (dmvstar@gmail.com)</string>
    <string name="version_num">1.2</string>
    <string name="sms_my_phone">+38...</string>
    <string name="button_switch_theme">Switch Theme</string>
    <string name="button_edit_favorites">Change favorites</string>
    <string name="button_change_theme">Change application theme</string>
    <string name="button_change_pin">Change pin password</string>

    <string name="hint_of_day">Happy New Year</string>
      
    <string name="theme_title">Select application theme</string>
    
    <string-array name="array_hint_of_day">
        <item>winter snowy ...</item>
        <item>warm spring ...</item>
        <item>hot summer ...</item>
        <item>autumn gold ...</item>
    </string-array>
        <string name="form_pass_change">Change your pin:</string>
        <string name="form_pass_old">Enter old pin:</string>
        <string name="form_pass_new">Enter new pin:</string>
        <string name="form_pass_button_change">Change</string>


</resources>
