<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_edit_favorites"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchChangeFavorites"
        android:text="@string/button_edit_favorites" />

    <Button
        android:id="@+id/button_change_theme"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchChangeTheme"
        android:text="@string/button_change_theme" />

    <Button
        android:id="@+id/button_change_pin"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchChangePassword"
        android:text="@string/button_change_pin" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_config_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:onClick="launchAbout"
            android:text="@string/action_about" />

    </LinearLayout>
    

</LinearLayout>
