<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:windowSoftInputMode="stateHidden" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lb_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_contacts_title"
                android:textAppearance="@style/CodeFontText" />

            <TextView
                android:id="@+id/lb_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_contacts_title"
                android:textAppearance="@style/CodeFontText" />

            <EditText
                android:id="@+id/contact_phone_filter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_blue"
                android:focusableInTouchMode="true"
                android:textAppearance="@style/CodeFontEdit"
                android:textColor="@color/Aqua"
                android:color="@color/Aqua"
                android:windowSoftInputMode="stateHidden" 

                />

            <ListView
                android:id="@+id/listview_all_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites_title"
                android:textAppearance="@style/CodeFontText" />

            <ListView
                android:id="@+id/listview_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>